Revise index.html for portfolio structure and content

--- a/index.html
+++ b/index.html
@@ -1,160 +1,90 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Base de Datos - GAMBOA FERNANDEZ Richard Alejandro</title>
-    <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Portafolio - Semanas</title>
+<link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <!-- HEADER CON LOGO UNIVERSIDAD -->
-    <header>
-        <div class="header-logo">
-            <!-- Reemplaza la ruta por el logo real de tu universidad -->
-            <img src="imagenes/logo-universidad.png" alt="Logo Universidad">
-            <div>
-                <h1>BASE DE DATOS</h1>
-                <p>GAMBOA FERNANDEZ Richard Alejandro</p>
-            </div>
-        </div>
-    </header>
+<header>
+<div class="header-logo">
+<img src="imagenes/logo-universidad.png" alt="Logo" />
+<div>
+<h1>BASE DE DATOS</h1>
+<p>GAMBOA FERNANDEZ Richard Alejandro</p>
+</div>
+</div>
+</header>
 
-    <!-- MENÚ DE NAVEGACIÓN -->
-    <nav class="menu">
-        <ul>
-            <li><a href="#inicio">Inicio</a></li>
-            <li><a href="#proyectos">Proyectos</a></li>
-            <li><a href="#habilidades">Habilidades</a></li>
-            <li><a href="#semanas">Semanas</a></li>
-            <li><a href="#contacto">Contacto</a></li>
-        </ul>
-    </nav>
 
-    <!-- INICIO -->
-    <section id="inicio" class="seccion">
-        <div class="contenedor">
-            <div class="foto-perfil">
-                <!-- Foto principal -->
-                <img id="fotoPrincipal" src="imagenes/tu-foto-perfil.jpg" alt="Foto de GAMBOA FERNANDEZ Richard Alejandro" width="200" height="200">
-            </div>
-            <div class="texto">
-                <h2>Portafolio de Base de Datos</h2>
-                <p>Trabajos y proyectos desarrollados en el curso de Base de Datos.</p>
-                <div class="redes-sociales">
-                    <a href="#"><img src="imagenes/github.png" alt="GitHub" width="30"></a>
-                    <a href="#"><img src="imagenes/linkedin.png" alt="LinkedIn" width="30"></a>
-                    <a href="#"><img src="imagenes/email.png" alt="Email" width="30"></a>
-                </div>
-            </div>
-        </div>
-    </section>
+<nav class="menu">
+<ul>
+<li><a href="#inicio">Inicio</a></li>
+<li><a href="#semanas">Semanas</a></li>
+<li><a href="#contacto">Contacto</a></li>
+</ul>
+</nav>
 
-    <!-- PROYECTOS -->
-    <section id="proyectos" class="seccion">
-        <h2>Proyectos</h2>
-        <div class="grid-proyectos">
-            <div class="proyecto-card">
-                <img src="imagenes/proyecto1.jpg" alt="Proyecto 1">
-                <h3>Sistema de Inventarios</h3>
-                <p>Base de datos para controlar productos, entradas y salidas.</p>
-            </div>
-            <div class="proyecto-card">
-                <img src="imagenes/proyecto2.jpg" alt="Proyecto 2">
-                <h3>Dashboard Analítico</h3>
-                <p>Visualización de indicadores clave del negocio.</p>
-            </div>
-            <div class="proyecto-card">
-                <img src="imagenes/proyecto3.jpg" alt="Proyecto 3">
-                <h3>API REST</h3>
-                <p>Servicios para consultar y actualizar información.</p>
-            </div>
-        </div>
-    </section>
 
-    <!-- HABILIDADES -->
-    <section id="habilidades" class="seccion">
-        <h2>Habilidades</h2>
-        <div class="habilidades-grid">
-            <div class="habilidad">
-                <img src="imagenes/mysql.png" alt="MySQL" width="60">
-                <span>MySQL</span>
-            </div>
-            <div class="habilidad">
-                <img src="imagenes/postgresql.png" alt="PostgreSQL" width="60">
-                <span>PostgreSQL</span>
-            </div>
-            <div class="habilidad">
-                <img src="imagenes/javascript.png" alt="JavaScript" width="60">
-                <span>JavaScript</span>
-            </div>
-            <div class="habilidad">
-                <img src="imagenes/html-css.png" alt="HTML/CSS" width="60">
-                <span>HTML/CSS</span>
-            </div>
-        </div>
-    </section>
+<section id="inicio" class="seccion inicio">
+<div class="contenedor">
+<div class="foto-perfil">
+<img src="imagenes/tu-foto-perfil.jpg" alt="Perfil" width="200" />
+</div>
+<div class="texto">
+<h2>Portafolio de Base de Datos</h2>
+<p>Trabajos desarrollados a lo largo del curso.</p>
+</div>
+</div>
+</section>
 
-    <!-- SEMANAS DE TRABAJO -->
-    <section id="semanas" class="seccion">
-        <h2>Semanas de trabajo</h2>
-        <div class="semanas-grid">
-            <!-- Copia este bloque y cambia número, tema y archivos para más semanas -->
-            <div class="semana-card">
-                <h3>Semana 1</h3>
-                <p>Tema: Introducción a Bases de Datos</p>
-                <div class="botones-semana">
-                    <button class="btn-vista" data-doc="documentos/semana1.pdf">Vista previa</button>
-                    <a class="btn-descarga" href="documentos/semana1.pdf" download>Descargar</a>
-                </div>
-            </div>
 
-            <div class="semana-card">
-                <h3>Semana 2</h3>
-                <p>Tema: Modelo Entidad-Relación</p>
-                <div class="botones-semana">
-                    <button class="btn-vista" data-doc="documentos/semana2.pdf">Vista previa</button>
-                    <a class="btn-descarga" href="documentos/semana2.pdf" download>Descargar</a>
-                </div>
-            </div>
+<section id="semanas" class="seccion semanas">
+<h2>Semanas disponibles</h2>
+<div class="semanas-grid">
+<!-- TARJETA DE SEMANA (SE REPLICARÁ) -->
+<div class="semana-card">
+<div class="semana-portada">
+<h3>Semana 1</h3>
+</div>
+<div class="semana-contenido">
+<p><strong>Tema:</strong> Introducción</p>
 
-            <div class="semana-card">
-                <h3>Semana 3</h3>
-                <p>Tema: Álgebra Relacional</p>
-                <div class="botones-semana">
-                    <button class="btn-vista" data-doc="documentos/semana3.pdf">Vista previa</button>
-                    <a class="btn-descarga" href="documentos/semana3.pdf" download>Descargar</a>
-                </div>
-            </div>
-        </div>
-    </section>
 
-    <!-- CONTACTO -->
-    <section id="contacto" class="seccion contacto">
-        <h2>Contacto</h2>
-        <div class="foto-contacto">
-            <img src="imagenes/tu-foto-contacto.jpg" alt="Richard Gamboa" width="150">
-        </div>
-        <div class="info-contacto">
-            <p><strong>Email:</strong> tu.correo@ejemplo.com</p>
-            <p><strong>Teléfono:</strong> +51 999 999 999</p>
-            <p><strong>Universidad:</strong> Nombre de la Universidad</p>
-        </div>
-    </section>
+<div class="documento">
+<span>Documento 1</span>
+<div class="botones">
+<button class="btn-vista" data-doc="documentos/semana1_doc1.pdf">Vista previa</button>
+<a class="btn-descarga" href="documentos/semana1_doc1.pdf" download>Descargar</a>
+</div>
+</div>
 
-    <!-- MODAL VISTA PREVIA DOCUMENTOS -->
-    <div id="modalVista" class="modal">
-        <div class="modal-contenido">
-            <button id="cerrarModal" class="modal-cerrar">&times;</button>
-            <iframe id="iframeDoc" src="" frameborder="0"></iframe>
-        </div>
-    </div>
 
-    <!-- FOOTER -->
-    <footer>
-        <p>&copy; 2025 GAMBOA FERNANDEZ Richard Alejandro. Portafolio de Base de Datos.</p>
-    </footer>
+<div class="documento">
+<span>Documento 2</span>
+<div class="botones">
+<button class="btn-vista" data-doc="documentos/semana1_doc2.pdf">Vista previa</button>
+<a class="btn-descarga" href="documentos/semana1_doc2.pdf" download>Descargar</a>
+</div>
+</div>
+</div>
+</div>
 
-    <script src="script.js"></script>
-</body>
+
+<!-- COPIA Y CAMBIA EL NÚMERO/ARCHIVOS PARA MÁS SEMANAS -->
+</div>
+</section>
+
+
+<section id="contacto" class="seccion contacto">
+<h2>Contacto</h2>
+<p><strong>Email:</strong> tu.correo@ejemplo.com</p>
+<p><strong>Teléfono:</strong> +51 999 999 999</p>
+</section>
+
+
+<!-- MODAL -->
+<div id="modalVista" class="modal">
+<div class="modal-contenido">
 </html>
-
