Refactor HTML structure for improved consistency

--- a/index.html
+++ b/index.html
@@ -6,85 +6,100 @@
 <title>Portafolio - Semanas</title>
 <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
+
+<!-- HEADER -->
 <header>
-<div class="header-logo">
-<img src="imagenes/logo-universidad.png" alt="Logo" />
-<div>
-<h1>BASE DE DATOS</h1>
-<p>GAMBOA FERNANDEZ Richard Alejandro</p>
-</div>
-</div>
+    <div class="header-logo">
+        <img src="imagenes/logo-universidad.png" alt="Logo" />
+        <div>
+            <h1>BASE DE DATOS</h1>
+            <p>GAMBOA FERNANDEZ Richard Alejandro</p>
+        </div>
+    </div>
 </header>
 
-
+<!-- NAV -->
 <nav class="menu">
-<ul>
-<li><a href="#inicio">Inicio</a></li>
-<li><a href="#semanas">Semanas</a></li>
-<li><a href="#contacto">Contacto</a></li>
-</ul>
+    <ul>
+        <li><a href="#inicio">Inicio</a></li>
+        <li><a href="#semanas">Semanas</a></li>
+        <li><a href="#contacto">Contacto</a></li>
+    </ul>
 </nav>
 
-
+<!-- SECCIÓN INICIO -->
 <section id="inicio" class="seccion inicio">
-<div class="contenedor">
-<div class="foto-perfil">
-<img src="imagenes/tu-foto-perfil.jpg" alt="Perfil" width="200" />
-</div>
-<div class="texto">
-<h2>Portafolio de Base de Datos</h2>
-<p>Trabajos desarrollados a lo largo del curso.</p>
-</div>
-</div>
+    <div class="contenedor">
+        <div class="foto-perfil">
+            <img src="imagenes/tu-foto-perfil.jpg" alt="Perfil" width="200" />
+        </div>
+        <div class="texto">
+            <h2>Portafolio de Base de Datos</h2>
+            <p>Trabajos desarrollados a lo largo del curso.</p>
+        </div>
+    </div>
 </section>
 
-
+<!-- SECCIÓN SEMANAS -->
 <section id="semanas" class="seccion semanas">
-<h2>Semanas disponibles</h2>
-<div class="semanas-grid">
-<!-- TARJETA DE SEMANA (SE REPLICARÁ) -->
-<div class="semana-card">
-<div class="semana-portada">
-<h3>Semana 1</h3>
-</div>
-<div class="semana-contenido">
-<p><strong>Tema:</strong> Introducción</p>
+    <h2>Semanas disponibles</h2>
 
+    <div class="semanas-grid">
 
-<div class="documento">
-<span>Documento 1</span>
-<div class="botones">
-<button class="btn-vista" data-doc="documentos/semana1_doc1.pdf">Vista previa</button>
-<a class="btn-descarga" href="documentos/semana1_doc1.pdf" download>Descargar</a>
-</div>
-</div>
+        <!-- TARJETA SEMANA 1 -->
+        <div class="tarjeta-semana">
+            <h3>Semana 1</h3>
 
+            <div class="tarjeta-contenido">
+                <p><strong>Tema:</strong> Introducción</p>
 
-<div class="documento">
-<span>Documento 2</span>
-<div class="botones">
-<button class="btn-vista" data-doc="documentos/semana1_doc2.pdf">Vista previa</button>
-<a class="btn-descarga" href="documentos/semana1_doc2.pdf" download>Descargar</a>
-</div>
-</div>
-</div>
-</div>
+                <!-- Documento 1 -->
+                <div class="documento">
+                    <span>Documento 1</span>
+                    <div class="botones">
+                        <button class="boton" onclick="abrirDocumento('documentos/semana1_doc1.pdf')">Vista previa</button>
+                        <a class="boton" href="documentos/semana1_doc1.pdf" download>Descargar</a>
+                    </div>
+                </div>
 
+                <!-- Documento 2 -->
+                <div class="documento">
+                    <span>Documento 2</span>
+                    <div class="botones">
+                        <button class="boton" onclick="abrirDocumento('documentos/semana1_doc2.pdf')">Vista previa</button>
+                        <a class="boton" href="documentos/semana1_doc2.pdf" download>Descargar</a>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-<!-- COPIA Y CAMBIA EL NÚMERO/ARCHIVOS PARA MÁS SEMANAS -->
-</div>
+        <!-- DUPLICA ESTE BLOQUE PARA SEMANAS 2, 3, 4... -->
+
+    </div>
 </section>
 
-
+<!-- CONTACTO -->
 <section id="contacto" class="seccion contacto">
-<h2>Contacto</h2>
-<p><strong>Email:</strong> tu.correo@ejemplo.com</p>
-<p><strong>Teléfono:</strong> +51 999 999 999</p>
+    <h2>Contacto</h2>
+    <p><strong>Email:</strong> tu.correo@ejemplo.com</p>
+    <p><strong>Teléfono:</strong> +51 999 999 999</p>
 </section>
 
-
-<!-- MODAL -->
+<!-- MODAL DE VISTA PREVIA -->
 <div id="modalVista" class="modal">
+    <div class="modal-contenido">
+        <button id="cerrarModal" class="modal-cerrar">Cerrar</button>
+        <iframe id="iframeDoc"></iframe>
+    </div>
+</div>
+
+<!-- ENLACE JS -->
+<script src="script.js"></script>
+
+</body>
+</html>
+class="modal">
 <div class="modal-contenido">
 </html>
