--- a/index.html
+++ b/index.html
@@ -3,122 +3,184 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portafolio - Base de Datos</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>Tareas - 16 Semanas</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
+
 <body>
+    <!-- ================= HEADER ================= -->
     <header class="header">
-        <div class="header-logo">
-            <img src="imagenes/logo.png" alt="Logo" />
-            <div>
-                <h1>BASE DE DATOS</h1>
-                <p>GAMBOA FERNANDEZ Richard Alejandro</p>
-            </div>
+        <div class="logo">
+            <!-- AQUI VA TU LOGO -->
+            <img src="img/logo.png" alt="Logo" />
         </div>
+        <h1 class="titulo">Tareas del Curso</h1>
     </header>
 
-    <nav class="menu">
-        <ul>
-            <li><a href="#inicio">Inicio</a></li>
-            <li><a href="#semanas">Semanas</a></li>
-            <li><a href="#contacto">Contacto</a></li>
-        </ul>
-    </nav>
+    <!-- ================= CONTENEDOR PRINCIPAL ================= -->
+    <main class="contenedor">
 
-    <section id="inicio" class="inicio seccion fade">
-        <div class="contenedor">
-            <div class="foto-perfil">
-                <img src="imagenes/perfil.jpg" alt="Perfil" width="210" />
-            </div>
-            <div class="texto">
-                <h2>Portafolio de Base de Datos</h2>
-                <p>Explora los trabajos desarrollados a lo largo del curso.</p>
-            </div>
-        </div>
-    </section>
+        <h2 class="subtitulo">Listado de tareas por semana</h2>
 
-    <section id="semanas" class="seccion semanas fade">
-        <h2>Semanas del Curso</h2>
         <div class="semanas-grid">
 
-            <!-- 16 SEMANAS GENERADAS -->
-            <!-- Cada tarjeta usa animación hover-glass para mostrar documentos -->
+            <!-- ===================================================================================== -->
+            <!-- ========================== SEMANAS 1 A 16 COMPLETAS ================================= -->
+            <!-- ===================================================================================== -->
 
-            <!-- SEMANA TEMPLATE -->
-            <!-- Uso de plantilla replicada 16 veces -->
-
-            <!-- SEMANA LOOP (1 a 16) -->
-            <!-- Puedes reemplazar los nombres de documentos -->
-
-            <!-- Semana Items generados -->
-            <!-- INICIO BLOQUE AUTO -->
-            <!-- WEEK CARDS -->
-
-            <!-- Se generan dinámicamente todas las semanas -->
-            <!-- Estructura básica -->
-
-            <!-- Usando un pequeño truco: solo estructura repetida -->
-
-            
-            <!-- SEMANAS 1-16 -->
-            <!-- Generado manualmente para compatibilidad -->
-
-            <!-- Repetimos estructura -->
+            <!-- SEMANA 1 -->
             <div class="semana-card">
-                <div class="semana-portada"><h3>Semana 1</h3></div>
-                <div class="semana-contenido">
-                    <div class="documento"><span>Documento 1</span><div class="botones"><button class="btn-vista" data-doc="docs/sem1_doc1.pdf">Vista</button><a class="btn-descarga" href="docs/sem1_doc1.pdf" download>Descargar</a></div></div>
-                    <div class="documento"><span>Documento 2</span><div class="botones"><button class="btn-vista" data-doc="docs/sem1_doc2.pdf">Vista</button><a class="btn-descarga" href="docs/sem1_doc2.pdf" download>Descargar</a></div></div>
+                <div class="card-header">Semana 1</div>
+                <div class="card-body">
+                    <div class="documento">
+                        <span>Documento 1</span>
+                        <button class="btn-vista" data-doc="documentos/semana1_doc1.pdf">Vista</button>
+                        <a class="btn-descarga" href="documentos/semana1_doc1.pdf" download>Descargar</a>
+                    </div>
+                    <div class="documento">
+                        <span>Documento 2</span>
+                        <button class="btn-vista" data-doc="documentos/semana1_doc2.pdf">Vista</button>
+                        <a class="btn-descarga" href="documentos/semana1_doc2.pdf" download>Descargar</a>
+                    </div>
                 </div>
             </div>
 
-            <!-- Semana 2 -->
+            <!-- SEMANA 2 -->
             <div class="semana-card">
-                <div class="semana-portada"><h3>Semana 2</h3></div>
-                <div class="semana-contenido">
-                    <div class="documento"><span>Documento 1</span><div class="botones"><button class="btn-vista" data-doc="docs/sem2_doc1.pdf">Vista</button><a class="btn-descarga" href="docs/sem2_doc1.pdf" download>Descargar</a></div></div>
-                    <div class="documento"><span>Documento 2</span><div class="botones"><button class="btn-vista" data-doc="docs/sem2_doc2.pdf">Vista</button><a class="btn-descarga" href="docs/sem2_doc2.pdf" download>Descargar</a></div></div>
+                <div class="card-header">Semana 2</div>
+                <div class="card-body">
+                    <div class="documento">
+                        <span>Documento 1</span>
+                        <button class="btn-vista" data-doc="documentos/semana2_doc1.pdf">Vista</button>
+                        <a class="btn-descarga" href="documentos/semana2_doc1.pdf" download>Descargar</a>
+                    </div>
+                    <div class="documento">
+                        <span>Documento 2</span>
+                        <button class="btn-vista" data-doc="documentos/semana2_doc2.pdf">Vista</button>
+                        <a class="btn-descarga" href="documentos/semana2_doc2.pdf" download>Descargar</a>
+                    </div>
                 </div>
             </div>
 
-            <!-- Semana 3 -->
+            <!-- SEMANA 3 -->
             <div class="semana-card">
-                <div class="semana-portada"><h3>Semana 3</h3></div>
-                <div class="semana-contenido">
-                    <div class="documento"><span>Documento 1</span><div class="botones"><button class="btn-vista" data-doc="docs/sem3_doc1.pdf">Vista</button><a class="btn-descarga" href="docs/sem3_doc1.pdf" download>Descargar</a></div></div>
-                    <div class="documento"><span>Documento 2</span><div class="botones"><button class="btn-vista" data-doc="docs/sem3_doc2.pdf">Vista</button><a class="btn-descarga" href="docs/sem3_doc2.pdf" download>Descargar</a></div></div>
+                <div class="card-header">Semana 3</div>
+                <div class="card-body">
+                    <div class="documento">
+                        <span>Documento 1</span>
+                        <button class="btn-vista" data-doc="documentos/semana3_doc1.pdf">Vista</button>
+                        <a class="btn-descarga" href="documentos/semana3_doc1.pdf" download>Descargar</a>
+                    </div>
+                    <div class="documento">
+                        <span>Documento 2</span>
+                        <button class="btn-vista" data-doc="documentos/semana3_doc2.pdf">Vista</button>
+                        <a class="btn-descarga" href="documentos/semana3_doc2.pdf" download>Descargar</a>
+                    </div>
                 </div>
             </div>
 
-            <!-- … REPETIR HASTA LA SEMANA 16 … -->
+            <!-- SEMANAS 4 A 16 GENERADAS AUTOMÁTICAMENTE -->
 
-            <!-- Semana 16 -->
+            <!-- SEMANA 4 -->
+            <div class="semana-card"><div class="card-header">Semana 4</div><div class="card-body">
+                <div class="documento"><span>Documento 1</span><button class="btn-vista" data-doc="documentos/semana4_doc1.pdf">Vista</button><a class="btn-descarga" href="documentos/semana4_doc1.pdf" download>Descargar</a></div>
+                <div class="documento"><span>Documento 2</span><button class="btn-vista" data-doc="documentos/semana4_doc2.pdf">Vista</button><a class="btn-descarga" href="documentos/semana4_doc2.pdf" download>Descargar</a></div>
+            </div></div>
+
+            <!-- SEMANA 5 -->
+            <div class="semana-card"><div class="card-header">Semana 5</div><div class="card-body">
+                <div class="documento"><span>Documento 1</span><button class="btn-vista" data-doc="documentos/semana5_doc1.pdf">Vista</button><a class="btn-descarga" href="documentos/semana5_doc1.pdf" download>Descargar</a></div>
+                <div class="documento"><span>Documento 2</span><button class="btn-vista" data-doc="documentos/semana5_doc2.pdf">Vista</button><a class="btn-descarga" href="documentos/semana5_doc2.pdf" download>Descargar</a></div>
+            </div></div>
+
+            <!-- SEMANA 6 -->
+            <div class="semana-card"><div class="card-header">Semana 6</div><div class="card-body">
+                <div class="documento"><span>Documento 1</span><button class="btn-vista" data-doc="documentos/semana6_doc1.pdf">Vista</button><a class="btn-descarga" href="documentos/semana6_doc1.pdf" download>Descargar</a></div>
+                <div class="documento"><span>Documento 2</span><button class="btn-vista" data-doc="documentos/semana6_doc2.pdf">Vista</button><a class="btn-descarga" href="documentos/semana6_doc2.pdf" download>Descargar</a></div>
+            </div></div>
+
+            <!-- SEMANA 7 -->
+            <div class="semana-card"><div class="card-header">Semana 7</div><div class="card-body">
+                <div class="documento"><span>Documento 1</span><button class="btn-vista" data-doc="documentos/semana7_doc1.pdf">Vista</button><a class="btn-descarga" href="documentos/semana7_doc1.pdf" download>Descargar</a></div>
+                <div class="documento"><span>Documento 2</span><button class="btn-vista" data-doc="documentos/semana7_doc2.pdf">Vista</button><a class="btn-descarga" href="documentos/semana7_doc2.pdf" download>Descargar</a></div>
+            </div></div>
+
+            <!-- SEMANA 8 -->
+            <div class="semana-card"><div class="card-header">Semana 8</div><div class="card-body">
+                <div class="documento"><span>Documento 1</span><button class="btn-vista" data-doc="documentos/semana8_doc1.pdf">Vista</button><a class="btn-descarga" href="documentos/semana8_doc1.pdf" download>Descargar</a></div>
+                <div class="documento"><span>Documento 2</span><button class="btn-vista" data-doc="documentos/semana8_doc2.pdf">Vista</button><a class="btn-descarga" href="documentos/semana8_doc2.pdf" download>Descargar</a></div>
+            </div></div>
+
+            <!-- SEMANA 9 -->
+            <div class="semana-card"><div class="card-header">Semana 9</div><div class="card-body">
+                <div class="documento"><span>Documento 1</span><button class="btn-vista" data-doc="documentos/semana9_doc1.pdf">Vista</button><a class="btn-descarga" href="documentos/semana9_doc1.pdf" download>Descargar</a></div>
+                <div class="documento"><span>Documento 2</span><button class="btn-vista" data-doc="documentos/semana9_doc2.pdf">Vista</button><a class="btn-descarga" href="documentos/semana9_doc2.pdf" download>Descargar</a></div>
+            </div></div>
+
+            <!-- SEMANA 10 -->
+            <div class="semana-card"><div class="card-header">Semana 10</div><div class="card-body">
+                <div class="documento"><span>Documento 1</span><button class="btn-vista" data-doc="documentos/semana10_doc1.pdf">Vista</button><a class="btn-descarga" href="documentos/semana10_doc1.pdf" download>Descargar</a></div>
+                <div class="documento"><span>Documento 2</span><button class="btn-vista" data-doc="documentos/semana10_doc2.pdf">Vista</button><a class="btn-descarga" href="documentos/semana10_doc2.pdf" download>Descargar</a></div>
+            </div></div>
+
+            <!-- SEMANA 11 -->
+            <div class="semana-card"><div class="card-header">Semana 11</div><div class="card-body">
+                <div class="documento"><span>Documento 1</span><button class="btn-vista" data-doc="documentos/semana11_doc1.pdf">Vista</button><a class="btn-descarga" href="documentos/semana11_doc1.pdf" download>Descargar</a></div>
+                <div class="documento"><span>Documento 2</span><button class="btn-vista" data-doc="documentos/semana11_doc2.pdf">Vista</button><a class="btn-descarga" href="documentos/semana11_doc2.pdf" download>Descargar</a></div>
+            </div></div>
+
+            <!-- SEMANA 12 -->
+            <div class="semana-card"><div class="card-header">Semana 12</div><div class="card-body">
+                <div class="documento"><span>Documento 1</span><button class="btn-vista" data-doc="documentos/semana12_doc1.pdf">Vista</button><a class="btn-descarga" href="documentos/semana12_doc1.pdf" download>Descargar</a></div>
+                <div class="documento"><span>Documento 2</span><button class="btn-vista" data-doc="documentos/semana12_doc2.pdf">Vista</button><a class="btn-descarga" href="documentos/semana12_doc2.pdf" download>Descargar</a></div>
+            </div></div>
+
+            <!-- SEMANA 13 -->
+            <div class="semana-card"><div class="card-header">Semana 13</div><div class="card-body">
+                <div class="documento"><span>Documento 1</span><button class="btn-vista" data-doc="documentos/semana13_doc1.pdf">Vista</button><a class="btn-descarga" href="documentos/semana13_doc1.pdf" download>Descargar</a></div>
+                <div class="documento"><span>Documento 2</span><button class="btn-vista" data-doc="documentos/semana13_doc2.pdf">Vista</button><a class="btn-descarga" href="documentos/semana13_doc2.pdf" download>Descargar</a></div>
+            </div></div>
+
+            <!-- SEMANA 14 -->
+            <div class="semana-card"><div class="card-header">Semana 14</div><div class="card-body">
+                <div class="documento"><span>Documento 1</span><button class="btn-vista" data-doc="documentos/semana14_doc1.pdf">Vista</button><a class="btn-descarga" href="documentos/semana14_doc1.pdf" download>Descargar</a></div>
+                <div class="documento"><span>Documento 2</span><button class="btn-vista" data-doc="documentos/semana14_doc2.pdf">Vista</button><a class="btn-descarga" href="documentos/semana14_doc2.pdf" download>Descargar</a></div>
+            </div></div>
+
+            <!-- SEMANA 15 -->
+            <div class="semana-card"><div class="card-header">Semana 15</div><div class="card-body">
+                <div class="documento"><span>Documento 1</span><button class="btn-vista" data-doc="documentos/semana15_doc1.pdf">Vista</button><a class="btn-descarga" href="documentos/semana15_doc1.pdf" download>Descargar</a></div>
+                <div class="documento"><span>Documento 2</span><button class="btn-vista" data-doc="documentos/semana15_doc2.pdf">Vista</button><a class="btn-descarga" href="documentos/semana15_doc2.pdf" download>Descargar</a></div>
+            </div></div>
+
+            <!-- SEMANA 16 -->
             <div class="semana-card">
-                <div class="semana-portada"><h3>Semana 16</h3></div>
-                <div class="semana-contenido">
-                    <div class="documento"><span>Documento 1</span><div class="botones"><button class="btn-vista" data-doc="docs/sem16_doc1.pdf">Vista</button><a class="btn-descarga" href="docs/sem16_doc1.pdf" download>Descargar</a></div></div>
-                    <div class="documento"><span>Documento 2</span><div class="botones"><button class="btn-vista" data-doc="docs/sem16_doc2.pdf">Vista</button><a class="btn-descarga" href="docs/sem16_doc2.pdf" download>Descargar</a></div></div>
+                <div class="card-header">Semana 16</div>
+                <div class="card-body">
+                    <div class="documento">
+                        <span>Documento 1</span>
+                        <button class="btn-vista" data-doc="documentos/semana16_doc1.pdf">Vista</button>
+                        <a class="btn-descarga" href="documentos/semana16_doc1.pdf" download>Descargar</a>
+                    </div>
+                    <div class="documento">
+                        <span>Documento 2</span>
+                        <button class="btn-vista" data-doc="documentos/semana16_doc2.pdf">Vista</button>
+                        <a class="btn-descarga" href="documentos/semana16_doc2.pdf" download>Descargar</a>
+                    </div>
                 </div>
             </div>
 
         </div>
-    </section>
+    </main>
 
-    <section id="contacto" class="seccion contacto fade">
-        <h2>Contacto</h2>
-        <p><strong>Email:</strong> tu.correo@ejemplo.com</p>
-        <p><strong>Teléfono:</strong> +51 999 999 999</p>
-    </section>
-
-    <!-- MODAL DOCUMENTOS -->
-    <div id="modalVista" class="modal">
+    <!-- ================= MODAL ================= -->
+    <div id="modal" class="modal">
         <div class="modal-contenido">
-            <button id="cerrarModal" class="modal-cerrar">&times;</button>
-            <iframe id="iframeDoc"></iframe>
+            <span class="cerrar">&times;</span>
+            <iframe id="visorPDF" src="" frameborder="0"></iframe>
         </div>
     </div>
 
     <script src="script.js"></script>
 </body>
 </html>
-
